# -

./: Algorithm.py  Config.py  Motor.py  Policy.py  Traction.py  car.py  deploy.ps1  docx_extracted_text.txt  main.py  monitor.ps1  run_local_syntax_check.ps1  serial_monitor.py
__pycache__/: Algorithm.cpython-311.pyc.1888576036416  Algorithm.cpython-311.pyc.2260018007968  Config.cpython-311.pyc.1516338182000  Config.cpython-311.pyc.1739985982176  Config.cpython-311.pyc.1754496989040  Config.cpython-311.pyc.2444331676720  Config.cpython-311.pyc.2512142300624  Config.cpython-311.pyc.2527624237792  Config.cpython-311.pyc.2648374711008  Motor.cpython-311.pyc.1501406676032  Motor.cpython-311.pyc.1585893284608  Motor.cpython-311.pyc.2031936518064  Motor.cpython-311.pyc.2527624239872  Policy.cpython-311.pyc.1501406329312  Policy.cpython-311.pyc.1585893282320  Policy.cpython-311.pyc.1754496982592  Policy.cpython-311.pyc.2260018008592  Policy.cpython-311.pyc.2319542361664  Policy.cpython-311.pyc.2444331671104  Policy.cpython-311.pyc.2648374710800  Traction.cpython-311.pyc.1501406675824  Traction.cpython-311.pyc.3040051927600  (+6 more)
algorithms/: pid.py  (+1 more)
hardware/esp32_s3cam_board/idf_camera_test/main/: CMakeLists.txt  app_config.h  main.c
hardware/esp32_s3cam_board/idf_camera_test/main/camera/: camera_vision.c  camera_vision.h  camera_web.c  camera_web.h
hardware/esp32_s3cam_board/idf_camera_test/main/imu/: imu.c  imu.h
hardware/esp32_s3cam_board/idf_camera_test/main/uart/: uart_link.c  uart_link.h
hardware/esp32_s3cam_board/idf_camera_test/main/wifi/: wifi_ap.c  wifi_ap.h
(+67 files in other folders)
